--- a/novidades.css
+++ b/novidades.css
@@ -2,7 +2,7 @@ body{
     background-color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: red;
-    
+    font-size:18px ;
 }
 p{
     color: aliceblue;
