--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
  background-color:  #add8e6;
 font-family: 'Times New Roman', Times, serif;
+font-size: 16px;
 margin: 0px;
 }
 
@@ -24,10 +25,10 @@ div{
     width: auto;
     height: auto;
     margin: 0 ;
-    padding: 10px 220px 0px 5px ;
+    padding: 10px 110px 0px 2px ;
 }
 .tamanhoImagem{
-    max-width: 500px;
+    max-width: 400px;
     max-height: 300px;
     width: auto;
     height: auto;
@@ -37,6 +38,28 @@ div{
     flex-direction: row;
     
 }
+.inicio{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 21px;
+}
+h1{
+    font-size: 45px;
+}
+.menu{
+    color: black;
+    font-size: 17px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
+    h2 { 
+        display: flex;
+        font-size: 11000px ;
+        color: ;
+        height: ;
+        width: ;
+
+}
+
+
+}
 
 
