--- a/entrar.css
+++ b/entrar.css
@@ -2,24 +2,13 @@
     padding: 0%;
     margin: 0px;
 }
-
 body{
+    font-family: Arial, Helvetica, sans-serif;
     background-color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: red;
-    font-size:17px ;
+
 }
-p{
-    color: aliceblue;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-/*-----------TAMANHO IMG-------*/
-.tamanhoNovidades{
-    max-width: 500px;
-    max-height: 300px;
-    width: auto;
-    height: auto;
-}
+
 /*-------------MENU---------*/
 nav{
     background-color: rebeccapurple;
